syntax = "proto3";

enum GType {
    //GUI TO MISSION
    START_DEBUG        = 0;
    START_AUTO         = 1;
    STOP               = 2;
    RESET_MISSIONS     = 3;
    MISSION_LIST       = 4; //jsonMissions
    SKIP_MISSION       = 5;
    PREVIOUS_MISSION   = 6; 
    ABSOLUTE_TRANSLATE = 7; //x, y, z
    RELATIVE_TRANSLATE = 8; //x, y, z
    ROTATE             = 9; //yaw, pitch, roll
    ADD_MISSION        = 10; //jsonMissions
    REMOVE_MISSION     = 11; //jsonMissions
    START_MANUAL       = 12;
    STOP_MANUAL        = 13;
    UPDATE_PIDS        = 14; //jsonMissions
    FIRE_WEAPONS       = 15; // fireWeapon1 ... fireWeapon5
}

message GUIComm {
    GType  type         = 1;
    string jsonMissions = 2;
    float  x            = 3;
    float  y            = 4;
    float  z            = 5;
    float  yaw          = 6;
    float  pitch        = 7;
    float  roll         = 8;
    bool   fireWeapons1 = 9;
    bool   fireWeapons2 = 10;
    bool   fireWeapons3 = 11;
    bool   fireWeapons4 = 12;
    bool   fireWeapons5 = 13;
}
