syntax = "proto3";

message LeakDetect {
    bool isLeaking = 1;
}
